hermes_fuzz_executed_few_shot_v2/fuzz_94_execution
'use strict';
var p = [];
 
'use strict';
 
'use strict';
var _ = f();  
function f(a = 2) {
    a;  
}
function g(a = 2) {
}
function h(a = 2) {
}
function i(a = 2) {
}
function j(a = 2) {
}
function k(a = 2) {
}
function l(a = 2) {
}
function m(a = 2) {
}
 
 
 
 
 
 
 
function n() {
}
function o(a = 2) {
}
function p() {
}
function q() {
}
function r() {    
}
function s1() {
    let a = 3;
}
 
 
var u = (_a = o('')) === null || _a === void 0? void 0 : _a.constructor;

 
 
 
var flagsParser;
 
var withFlagsParser = function (callback) {
    flagsParser = callback;
    return callback.bind(undefined, flagsParser());
};
 
try {
     
     
    withFlagsParser(function (flags) {
        if (flags.useES6Compiler) {
            return {
                useHermes: false
            };
        }
        return

Execution Output ------------------:
test.js:68:15: error: '}' expected at end of block
        return
              ^
test.js:62:38: note: block starts here
    withFlagsParser(function (flags) {
                                     ^
